# Cocos2dxTemplate

./: .cocos-project.json  CMakeLists.txt  LICENSE  README.md  Utils.cmake
Classes/: AppDelegate.cpp  AppDelegate.h  AppMacros.h  HelloWorldScene.h  IncludeCocos2dBegin.h  IncludeCocos2dEnd.h  main.cpp
android/: .gitignore  gradle.properties  settings.gradle
android/app/: AndroidManifest.xml  build.gradle
android/app/jni/: Android.mk  main.cpp
android/app/res/values/: strings.xml
android/app/src/org/cocos2dx/cpp/: AppActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: PrecompiledHeader.cmake  Utils.cmake
ios/: AppController.mm
proj.win32/: main.cpp
src/: AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h  main.cpp  pch.cpp  pch.h
win32/: Cocos2dxTemplate.rc  resource.h
